--- a/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
+++ b/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
@@ -6,79 +6,70 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:GradingSystem.View.Admin.Dialogs" 
         mc:Ignorable="d" Title="Show Grade"
-        WindowStartupLocation="CenterScreen" Height="700" Width="900"
+        WindowStartupLocation="CenterScreen" Height="720" Width="1200"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
 
     <Grid>
         <Border Background="Black" Margin="05 05 05 05" CornerRadius="4" Padding="5 5 5 5">
             <materialDesign:Card>
-                <Grid>
+
+                <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-
-                    <Grid>
-                        <materialDesign:Card Background="DarkGreen">
+                    
+                    <Grid Grid.Row="1">
+                        <materialDesign:Card Background="DarkGreen" Margin="10" Padding="15">
                             <Grid>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
 
-                                <Grid>
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="*"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid Grid.Row="0">
-                                            <TextBox x:Name="idTxt"  Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                                                     Margin="0 0 0 0" Height="40" Width="130" FontSize="15" 
-                                                     Padding="5 0 0 0" Background="White"
-                                                     Grid.Row="1" MaxLength="15" KeyDown="StudentIdTxt_KeyDown">
-                                                <materialDesign:HintAssist.Hint>
-                                                    <StackPanel Orientation="Horizontal">
-                                                        <TextBlock Text="Student ID" VerticalAlignment="Center"/>
-                                                    </StackPanel>
-                                                </materialDesign:HintAssist.Hint>
-                                            </TextBox>
-                                        </Grid>
-                                        <Grid Grid.Row="1">
-                                            <TextBlock x:Name="studentNameTxt" Text="Student Name" Foreground="White" HorizontalAlignment="Center" 
-               VerticalAlignment="Center" TextWrapping="Wrap" Width="auto"
-               Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                                        </Grid>
-                                        <Grid Grid.Row="2">
-                                            <TextBlock x:Name="courseTxt" Text="Program" Foreground="White" HorizontalAlignment="Center" 
-               VerticalAlignment="Center" TextWrapping="Wrap" Width="auto"
-               Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                                        </Grid>
-                                        <Grid Grid.Row="3">
-                                            <TextBlock x:Name="semesterTxt" Text="Semester" Foreground="White" HorizontalAlignment="Center" 
-               VerticalAlignment="Center" TextWrapping="Wrap" Width="auto"
-               Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                                        </Grid>
-                                        <Grid Grid.Row="4">
-                                            <TextBlock x:Name="yearLevelTxt" Text="Year Level" Foreground="White" HorizontalAlignment="Center" 
-               VerticalAlignment="Center" TextWrapping="Wrap" Width="auto"
-               Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                                        </Grid>
-                                        <Grid Grid.Row="5">
-                                            <TextBlock x:Name="scholarshipTxt" Text="Status" Foreground="White" HorizontalAlignment="Center" 
-               VerticalAlignment="Center" TextWrapping="Wrap" Width="auto"
-               Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                                        </Grid>
+                                <!-- Student ID Input -->
+                                <TextBox x:Name="idTxt"  
+                     Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                     Height="40" Width="200" FontSize="15"
+                     Padding="10 0 0 0" Background="White" 
+                     materialDesign:HintAssist.Hint="Student ID"
+                     Grid.Row="0" MaxLength="15" 
+                     KeyDown="StudentIdTxt_KeyDown"/>
 
-                                    </Grid>
-                                </Grid>
+                                <!-- Student Information Labels -->
+                                <TextBlock x:Name="studentNameTxt" Text="Student Name" Foreground="White" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center" 
+                       TextWrapping="Wrap" FontSize="16" Grid.Row="1" 
+                       Style="{StaticResource MaterialDesignBody1TextBlock}"/>
+
+                                <TextBlock x:Name="courseTxt" Text="Program" Foreground="White" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center" 
+                       TextWrapping="Wrap" FontSize="16" Grid.Row="2"
+                       Style="{StaticResource MaterialDesignBody1TextBlock}"/>
+
+                                <TextBlock x:Name="semesterTxt" Text="Semester" Foreground="White" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center" 
+                       TextWrapping="Wrap" FontSize="16" Grid.Row="3"
+                       Style="{StaticResource MaterialDesignBody1TextBlock}"/>
+
+                                <TextBlock x:Name="yearLevelTxt" Text="Year Level" Foreground="White" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center" 
+                       TextWrapping="Wrap" FontSize="16" Grid.Row="4"
+                       Style="{StaticResource MaterialDesignBody1TextBlock}"/>
+
+                                <TextBlock x:Name="scholarshipTxt" Text="Status" Foreground="White" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center" 
+                       TextWrapping="Wrap" FontSize="16" Grid.Row="5"
+                       Style="{StaticResource MaterialDesignBody1TextBlock}"/>
                             </Grid>
                         </materialDesign:Card>
                     </Grid>
-                    <Grid Grid.Column="1">
+                    <Grid Grid.Column="1" Grid.Row="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
@@ -88,9 +79,8 @@
                                           RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="StudentSubjectDatagrid"
                                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                                           CellStyle="{DynamicResource DataGridCellStyle1}" 
-                                          HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" 
-                                          VerticalAlignment="Stretch"
-                                          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding">
+                                          HorizontalScrollBarVisibility="Auto"
+                                          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding" Margin="0,10,10,10">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
                                     <DataGridTextColumn Header="Descriptive Title" Binding="{Binding Subject.SubjectName}" IsReadOnly="True"/>
@@ -118,7 +108,7 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <Grid Grid.Row="0">
-                                <materialDesign:Card Background="DarkGreen">
+                                <materialDesign:Card Background="DarkGreen" Margin="0 0 10 0">
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="220"/>
@@ -128,7 +118,7 @@
                                         <TextBox Grid.Column="0" Background="White" Margin="10" Width="200" HorizontalAlignment="Left"
                                                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                                  Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                                                 materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0">
+                                                 materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" TextChanged="SearchTextBox_TextChanged">
                                         </TextBox>
 
                                         <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="Green"
@@ -136,7 +126,7 @@
                                             <TextBlock Text="ADD SUB"/>
                                         </Button>
                                         <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="DarkRed"
-                                                Width="150" Grid.Column="2" HorizontalAlignment="Left" >
+                                                Width="150" Grid.Column="2" HorizontalAlignment="Left" Click="RemoveSubjectBtn" >
                                             <TextBlock Text="REMOVE SUB"/>
                                         </Button>
                                     </Grid>
@@ -146,9 +136,8 @@
                                           RowStyle="{DynamicResource DataGridRowStyle1}"
                                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                                           CellStyle="{DynamicResource DataGridCellStyle1}" 
-                                          HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" 
-                                          VerticalAlignment="Stretch"
-                                          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding">
+                                          HorizontalScrollBarVisibility="Auto"
+                                          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding" Margin="0,10,10,10" Grid.Row="1">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="ID" Binding="{Binding SubjectId}" IsReadOnly="True"/>
                                     <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
