--- a/GradingSystem/View/Admin/Dialogs/EditUser.xaml
+++ b/GradingSystem/View/Admin/Dialogs/EditUser.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="GradingSystem.View.Admin.Dialogs.AddUser"
+﻿<Window x:Class="GradingSystem.View.Admin.Dialogs.EditUser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GradingSystem.View.Admin.Dialogs"
-        mc:Ignorable="d" Title="Add User"
+        mc:Ignorable="d" Title="Edit User"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen" Width="800" Height="500"
         WindowStyle="None" Background="{x:Null}" AllowsTransparency="True" MouseDown="Window_MouseDown">
+
     <Grid>
         <materialDesign:Card UniformCornerRadius="20">
             <Grid>
@@ -30,25 +31,25 @@
                                     </Grid.RowDefinitions>
                                     <Grid Grid.Row="0">
                                         <TextBlock Text="The University of Manila" Foreground="white"
-                            FontFamily="Tahoma" Style="{StaticResource MaterialDesignCaptionTextBlock}"
-                            FontSize="25" VerticalAlignment="Bottom" TextWrapping="Wrap" TextAlignment="Center"
-                            HorizontalAlignment="Center"/>
+                        FontFamily="Tahoma" Style="{StaticResource MaterialDesignCaptionTextBlock}"
+                        FontSize="25" VerticalAlignment="Bottom" TextWrapping="Wrap" TextAlignment="Center"
+                        HorizontalAlignment="Center"/>
                                     </Grid>
                                     <Image Grid.Row="1" Source="/Resources/man.png" 
-                    Height="130" Margin="10" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                Height="130" Margin="10" 
+                HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     <Grid Grid.Row="2">
                                         <TextBlock Text="Let's get you set Up" Foreground="white"
-                            FontFamily="Tahoma"
-                            FontSize="20" Margin="0 0 0 0"
-                            VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                        FontFamily="Tahoma"
+                        FontSize="20" Margin="0 0 0 0"
+                        VerticalAlignment="Top" HorizontalAlignment="Center"/>
                                         <TextBlock Text="It should just take a few minutes of your time." Foreground="white"
-                            FontFamily="Tahoma" TextWrapping="Wrap" Style="{StaticResource MaterialDesignBody1TextBlock}"
-                            FontSize="15" Margin="10 40 10 0" TextAlignment="Center"
-                            VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                        FontFamily="Tahoma" TextWrapping="Wrap" Style="{StaticResource MaterialDesignBody1TextBlock}"
+                        FontSize="15" Margin="10 40 10 0" TextAlignment="Center"
+                        VerticalAlignment="Top" HorizontalAlignment="Center"/>
                                         <Image Grid.Row="1" Source="/Resources/next.png" 
-                        Height="50" Margin="0 20 0 0"
-                        HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    Height="50" Margin="0 20 0 0"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     </Grid>
                                 </Grid>
                             </Grid>
@@ -69,12 +70,12 @@
                                     <StackPanel Margin="0 0 20 0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                                         <!-- Minimize Button -->
                                         <Button Style="{StaticResource MaterialDesignIconButton}" Foreground="black"
-                         x:Name="MinimizeButton" Content="{materialDesign:PackIcon Kind=Minimize}" 
-                         Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Minimize"/>
+                     x:Name="MinimizeButton" Content="{materialDesign:PackIcon Kind=Minimize}" 
+                     Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="Minimize"/>
                                         <!-- Close Button -->
                                         <Button Style="{StaticResource MaterialDesignIconButton}" Foreground="black"
-                         x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=Close}" 
-                         Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="CloseWindow"/>
+                     x:Name="CloseButton" Content="{materialDesign:PackIcon Kind=Close}" 
+                     Width="30" Height="30" Margin="5" VerticalAlignment="Top" Click="CloseWindow"/>
                                     </StackPanel>
                                 </Grid>
                             </Grid>
@@ -105,57 +106,64 @@
                                         <!-- User ID -->
                                         <TextBlock Text="User ID" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="UserIdTxt"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 Height="25" Width="200" FontSize="15" HorizontalAlignment="left" Margin="30 0 0 0"
-                                                 Grid.Column="1" Grid.Row="0" Padding="10 0 0 0">
+                                             Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                             Height="25" Width="200" FontSize="15" HorizontalAlignment="left" Margin="30 0 0 0"
+                                             Grid.Column="1" Grid.Row="0" Padding="10 0 0 0"
+                                             Text="{Binding SelectedUser.UserId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                             IsReadOnly="True">
                                         </TextBox>
 
                                         <!-- First Name -->
                                         <TextBlock Grid.Row="1" Text="First Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="FnameTxt"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
-                                                 Grid.Column="1" Grid.Row="1">
+                                             Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                             HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                             Grid.Column="1" Grid.Row="1"
+                                             Text="{Binding SelectedUser.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                         </TextBox>
 
                                         <!-- Last Name -->
                                         <TextBlock Grid.Row="2" Text="Last Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="LnameTxt"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
-                                                 Grid.Column="1" Grid.Row="2">
+                                             Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                             HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                             Grid.Column="1" Grid.Row="2"
+                                             Text="{Binding SelectedUser.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                         </TextBox>
 
                                         <!-- Email -->
                                         <TextBlock Grid.Row="3" Text="Email Address" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="EmailTxt"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
-                                                 Grid.Column="1" Grid.Row="3">
+                                             Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                             HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                             Grid.Column="1" Grid.Row="3"
+                                             Text="{Binding SelectedUser.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                         </TextBox>
 
                                         <!-- Username -->
                                         <TextBlock Grid.Row="4" Text="Username" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="UsernameTxt"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
-                                                 Grid.Column="1" Grid.Row="4">
+                                             Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                             HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 0 0"
+                                             Grid.Column="1" Grid.Row="4"
+                                             Text="{Binding SelectedUser.Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                         </TextBox>
 
                                         <!-- Password -->
                                         <TextBlock Grid.Row="5" Text="Password" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <PasswordBox x:Name="PasswordTxt" Style="{StaticResource MaterialDesignFilledRevealPasswordBox}"
-                                                 HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 10 0"
-                                                 Grid.Column="1" Grid.Row="5">
+                                             HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" Padding="10 0 10 0"
+                                             Grid.Column="1" Grid.Row="5">
                                         </PasswordBox>
 
                                         <!-- Roles -->
                                         <TextBlock Grid.Row="6" Text="Role" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
 
                                         <ComboBox x:Name="RoleCmb" Style="{StaticResource MaterialDesignFilledComboBox}" 
-                                                  HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
-                                                  Grid.Column="1" Grid.Row="6" 
-                                                  SelectedValuePath="Content" Padding="10 0 10 0">
+                                              HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
+                                              Grid.Column="1" Grid.Row="6" 
+                                              SelectedValuePath="Content" Padding="10 0 10 0"
+                                              SelectedValue="{Binding SelectedUser.Roles, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                             <ComboBoxItem>Staff</ComboBoxItem>
                                             <ComboBoxItem>Encoder</ComboBoxItem>
                                         </ComboBox>
@@ -170,13 +178,13 @@
                                             </Grid.ColumnDefinitions>
                                             <Grid Grid.Column="1">
                                                 <Button VerticalAlignment="Top" Margin="0 0 0 5" Background="Gray"
-                                 Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
-                                 Click="CancelBtn">Cancel</Button>
+                             Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
+                             Click="CancelBtn">Cancel</Button>
                                             </Grid>
                                             <Grid Grid.Column="2">
                                                 <Button Margin="5 0 0 0" VerticalAlignment="Top" 
-                                 Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
-                                 Click="SaveBtn">Save</Button>
+                             Style="{StaticResource MaterialDesignFlatDarkBgButton}" 
+                             Click="SaveBtn">Save</Button>
                                             </Grid>
                                         </Grid>
                                     </Grid>
