--- a/GradingSystem/App.xaml
+++ b/GradingSystem/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GradingSystem"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-             StartupUri="Login.xaml">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -60,9 +59,13 @@
                     <DataTrigger Binding="{Binding IsGradeLow}" Value="True">
                         <Setter Property="Foreground" Value="Red"/>
                     </DataTrigger>
+                    <DataTrigger Binding="{Binding Grade}" Value="INC">
+                        <Setter Property="Foreground" Value="Red"/>
+                    </DataTrigger>
                 </Style.Triggers>
             </Style>
-            
+
+
             <!-- DATAGRID -->
             <Style x:Key="{ComponentResourceKey ResourceId=DataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}" TargetType="{x:Type Button}">
                 <Setter Property="Template">
