--- a/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
+++ b/GradingSystem/View/Admin/Dialogs/AddGrade.xaml
@@ -12,28 +12,55 @@
     <Grid>
         <Border Background="Black" Margin="05 05 05 05" CornerRadius="4" Padding="5 5 5 5">
             <materialDesign:Card>
-
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
                     
-                    <Grid Grid.Row="1">
-                        <materialDesign:Card Background="DarkGreen" Margin="10" Padding="15">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                </Grid.RowDefinitions>
+                    <!-- Title Bar with Minimize, Maximize, and Close Buttons -->
+                    <Grid Grid.Row="0" Background="DarkGreen">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Text="Show Grade" VerticalAlignment="Center" Foreground="White" Margin="10,0,0,0"/>
+                        
+                        <Button Grid.Column="1" Style="{StaticResource MaterialDesignFlatButton}" Click="MinimizeButton_Click">
+                            <materialDesign:PackIcon Kind="WindowMinimize" Foreground="White"/>
+                        </Button>
+                        <Button Grid.Column="2" Style="{StaticResource MaterialDesignFlatButton}" Click="MaximizeButton_Click">
+                            <materialDesign:PackIcon Kind="WindowMaximize" Foreground="White"/>
+                        </Button>
+                        <Button Grid.Column="3" Style="{StaticResource MaterialDesignFlatButton}" Click="CloseButton_Click">
+                            <materialDesign:PackIcon Kind="WindowClose" Foreground="White"/>
+                        </Button>
+                    </Grid>
 
-                                <!-- Student ID Input -->
-                                <TextBox x:Name="idTxt"  
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <Grid Grid.Row="1">
+                            <materialDesign:Card Background="DarkGreen" Margin="10" Padding="15">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+
+                                    <!-- Student ID Input -->
+                                    <TextBox x:Name="idTxt"  
                      Style="{StaticResource MaterialDesignOutlinedTextBox}" 
                      Height="40" Width="200" FontSize="15"
                      Padding="10 0 0 0" Background="White" 
@@ -41,110 +68,118 @@
                      Grid.Row="0" MaxLength="15" 
                      KeyDown="StudentIdTxt_KeyDown"/>
 
-                                <!-- Student Information Labels -->
-                                <TextBlock x:Name="studentNameTxt" Text="Student Name" Foreground="White" 
+                                    <!-- Student Information Labels -->
+                                    <TextBlock x:Name="studentNameTxt" Text="Student Name" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        TextWrapping="Wrap" FontSize="16" Grid.Row="1" 
                        Style="{StaticResource MaterialDesignBody1TextBlock}"/>
 
-                                <TextBlock x:Name="courseTxt" Text="Program" Foreground="White" 
+                                    <TextBlock x:Name="courseTxt" Text="Program" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        TextWrapping="Wrap" FontSize="16" Grid.Row="2"
                        Style="{StaticResource MaterialDesignBody1TextBlock}"/>
 
-                                <TextBlock x:Name="semesterTxt" Text="Semester" Foreground="White" 
+                                    <TextBlock x:Name="semesterTxt" Text="Semester" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        TextWrapping="Wrap" FontSize="16" Grid.Row="3"
                        Style="{StaticResource MaterialDesignBody1TextBlock}"/>
 
-                                <TextBlock x:Name="yearLevelTxt" Text="Year Level" Foreground="White" 
+                                    <TextBlock x:Name="yearLevelTxt" Text="Year Level" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        TextWrapping="Wrap" FontSize="16" Grid.Row="4"
                        Style="{StaticResource MaterialDesignBody1TextBlock}"/>
 
-                                <TextBlock x:Name="scholarshipTxt" Text="Status" Foreground="White" 
+                                    <TextBlock x:Name="scholarshipTxt" Text="Status" Foreground="White" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" 
                        TextWrapping="Wrap" FontSize="16" Grid.Row="5"
                        Style="{StaticResource MaterialDesignBody1TextBlock}"/>
-                            </Grid>
-                        </materialDesign:Card>
-                    </Grid>
-                    <Grid Grid.Column="1" Grid.Row="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Grid Grid.Row="0">
-                            <DataGrid ItemsSource="{Binding StudentSubjects}"  Style="{StaticResource DataGridStyle1}"
-                                          RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="StudentSubjectDatagrid"
-                                          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                          CellStyle="{DynamicResource DataGridCellStyle1}" 
-                                          HorizontalScrollBarVisibility="Auto"
-                                          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding" Margin="0,10,10,10">
-                                <DataGrid.Columns>
-                                    <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Descriptive Title" Binding="{Binding Subject.SubjectName}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Professor" Binding="{Binding ProfessorName}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Grade" Binding="{Binding Grade}" IsReadOnly="False">
-                                        <DataGridTextColumn.CellStyle>
-                                            <Style TargetType="DataGridCell">
-                                                <Setter Property="Background" Value="White"/>
-                                                <Setter Property="Foreground" Value="Black"/>
-                                                <Setter Property="Padding" Value="10"/>
-                                                <Setter Property="Height" Value="30"/>
-                                                <Setter Property="BorderBrush" Value="DarkGray"/>
-                                                <Setter Property="BorderThickness" Value="1"/>
-                                            </Style>
-                                        </DataGridTextColumn.CellStyle>
-                                    </DataGridTextColumn>
-
-                                </DataGrid.Columns>
-                            </DataGrid>
+                                </Grid>
+                            </materialDesign:Card>
                         </Grid>
-                        <Grid Grid.Row="1">
+                        <Grid Grid.Column="1" Grid.Row="1">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="50"/>
+                                <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <Grid Grid.Row="0">
-                                <materialDesign:Card Background="DarkGreen" Margin="0 0 10 0">
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="220"/>
-                                            <ColumnDefinition Width="170"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <TextBox Grid.Column="0" Background="White" Margin="10" Width="200" HorizontalAlignment="Left"
+                                <DataGrid ItemsSource="{Binding StudentSubjects}" Style="{StaticResource DataGridStyle1}"
+          RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="StudentSubjectDatagrid"
+          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+          CellStyle="{DynamicResource DataGridCellStyle1}"
+          HorizontalScrollBarVisibility="Auto"
+          VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding" Margin="0,10,10,10">
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Descriptive Title" Binding="{Binding Subject.SubjectName}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Professor" Binding="{Binding ProfessorName}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Grade" Binding="{Binding Grade}" IsReadOnly="False">
+                                            <DataGridTextColumn.CellStyle>
+                                                <Style TargetType="DataGridCell">
+                                                    <Setter Property="Background" Value="White"/>
+                                                    <Setter Property="Foreground" Value="Black"/>
+                                                    <Setter Property="Padding" Value="10"/>
+                                                    <Setter Property="Height" Value="30"/>
+                                                    <Setter Property="BorderBrush" Value="DarkGray"/>
+                                                    <Setter Property="BorderThickness" Value="1"/>
+                                                </Style>
+                                            </DataGridTextColumn.CellStyle>
+                                            <DataGridTextColumn.EditingElementStyle>
+                                                <Style TargetType="TextBox">
+                                                    <!-- MaxLength for the Grade input -->
+                                                    <Setter Property="MaxLength" Value="10"/>
+                                                    <EventSetter Event="PreviewTextInput" Handler="GradePreviewTextInput"/>
+                                                </Style>
+                                            </DataGridTextColumn.EditingElementStyle>
+                                        </DataGridTextColumn>
+                                    </DataGrid.Columns>
+                                </DataGrid>
+
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0">
+                                    <materialDesign:Card Background="DarkGreen" Margin="0 0 10 0">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="220"/>
+                                                <ColumnDefinition Width="170"/>
+                                                <ColumnDefinition Width="*"/>
+                                            </Grid.ColumnDefinitions>
+                                            <TextBox Grid.Column="0" Background="White" Margin="10" Width="200" HorizontalAlignment="Left"
                                                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                                  Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
                                                  materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" TextChanged="SearchTextBox_TextChanged">
-                                        </TextBox>
+                                            </TextBox>
 
-                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="Green"
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="Green"
                                                 Width="150" Grid.Column="1" HorizontalAlignment="Left" Click="AddSubjectBtn" >
-                                            <TextBlock Text="ADD SUB"/>
-                                        </Button>
-                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="DarkRed"
+                                                <TextBlock Text="ADD SUB"/>
+                                            </Button>
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Background="DarkRed"
                                                 Width="150" Grid.Column="2" HorizontalAlignment="Left" Click="RemoveSubjectBtn" >
-                                            <TextBlock Text="REMOVE SUB"/>
-                                        </Button>
-                                    </Grid>
-                                </materialDesign:Card>
-                            </Grid>
-                            <DataGrid ItemsSource="{Binding FilteredSubjects}" x:Name="SubjectListDataGrid" Style="{StaticResource DataGridStyle1}"
+                                                <TextBlock Text="REMOVE SUB"/>
+                                            </Button>
+                                        </Grid>
+                                    </materialDesign:Card>
+                                </Grid>
+                                <DataGrid ItemsSource="{Binding FilteredSubjects}" x:Name="SubjectListDataGrid" Style="{StaticResource DataGridStyle1}"
                                           RowStyle="{DynamicResource DataGridRowStyle1}"
                                           ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
                                           CellStyle="{DynamicResource DataGridCellStyle1}" 
                                           HorizontalScrollBarVisibility="Auto"
                                           VerticalScrollBarVisibility="Auto" CellEditEnding="DataGrid_CellEditEnding" Margin="0,10,10,10" Grid.Row="1">
-                                <DataGrid.Columns>
-                                    <DataGridTextColumn Header="ID" Binding="{Binding SubjectId}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Descriptive Title" Binding="{Binding SubjectName}" IsReadOnly="True"/>
-                                    <DataGridTextColumn Header="Professor" Binding="{Binding ProfessorName}" IsReadOnly="True"/>
-                                </DataGrid.Columns>
-                            </DataGrid>
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="ID" Binding="{Binding SubjectId}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Course Code" Binding="{Binding CourseCode}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Descriptive Title" Binding="{Binding SubjectName}" IsReadOnly="True"/>
+                                        <DataGridTextColumn Header="Professor" Binding="{Binding ProfessorName}" IsReadOnly="True"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                            </Grid>
                         </Grid>
                     </Grid>
                 </Grid>
