--- a/GradingSystem/View/Encoder/Grades.xaml
+++ b/GradingSystem/View/Encoder/Grades.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="GradingSystem.View.Admin.ManageStudents"
+﻿<UserControl x:Class="GradingSystem.View.Encoder.Grades"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GradingSystem.View.Admin"
+             xmlns:local="clr-namespace:GradingSystem.View.Encoder"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
+             xmlns:viewModel="clr-namespace:GradingSystem.ViewModel" 
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -17,10 +16,10 @@
 
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
-            <TextBlock Text="Manage Students" 
-               FontSize="35"
-               Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-               VerticalAlignment="Center"/>
+            <TextBlock Text="Manage Grades" 
+                      FontSize="35"
+                      Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                      VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -41,7 +40,7 @@
                                     </Grid.ColumnDefinitions>
 
                                     <Grid Grid.Column="0" Margin="20 0 0 0">
-                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
+                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}" Command="{Binding ExportCommand}">
                                             Export
                                         </Button>
                                     </Grid>
@@ -50,20 +49,24 @@
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="auto"/>
                                             <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
                                         </Grid.ColumnDefinitions>
 
                                         <Grid Grid.Column="0">
-                                            <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                                                     materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" Width="200"
-                                                     Height="30" TextChanged="SearchTextBox">
-                                            </TextBox>
+                                            <TextBox 
+                                                Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                                Width="200" 
+                                                Height="40" FontSize="15" Padding="10 0 0 0"
+                                                materialDesign:HintAssist.Hint="Search" TextChanged="SearchTextBox"/>
                                         </Grid>
                                         <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="addStudentBtn">
+                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddGradeBtn" >
                                                 <StackPanel>
                                                     <materialDesign:PackIcon Kind="Add" Height="20"/>
                                                 </StackPanel>
                                             </Button>
+                                        </Grid>
+                                        <Grid Grid.Column="2">
                                         </Grid>
                                     </Grid>
                                 </Grid>
@@ -77,30 +80,25 @@
                                       CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Students}">
 
                                 <DataGrid.Columns>
-
-                                    <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="100" Binding="{Binding StudentId}"/>
+                                    <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding StudentId}"/>
                                     <DataGridTextColumn Header="Name" CanUserResize="False" Binding="{Binding StudentName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Email" CanUserResize="False" Binding="{Binding Email}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Program" CanUserResize="False" Binding="{Binding Program.ProgramName}" IsReadOnly="True" Width="auto"/>
-                                    <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="auto"/>
-                                    <DataGridTextColumn Header="Semester" CanUserResize="False" Binding="{Binding Semester}" IsReadOnly="True" Width="auto"/>
+                                    <DataGridTextColumn Header="Program" CanUserResize="False" Binding="{Binding Program.ProgramName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Year" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Semester" CanUserResize="False" Binding="{Binding Semester}" IsReadOnly="True" Width="*"/>
                                     <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
-                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource gridEditButton}" Click="EditButton_Click">
-                                                        <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
-                                                    </Button>
-                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" Click="deleteStudentBtn">
-                                                        <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
+                                                    <Button Margin="0 0 0 0" Style="{StaticResource gridEditButton}" 
+                                                            Background="Green" Cursor="Hand" Click="ShowGradeBtn">
+                                                        <materialDesign:PackIcon Kind="Eye" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                 </StackPanel>
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
-
                                 </DataGrid.Columns>
 
                             </DataGrid>
