--- a/GradingSystem/View/Admin/ManageEnrollment.xaml
+++ b/GradingSystem/View/Admin/ManageEnrollment.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="GradingSystem.View.Admin.ManageStudents"
+﻿<UserControl x:Class="GradingSystem.View.Admin.ManageEnrollment"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GradingSystem.View.Admin"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModel="clr-namespace:GradingSystem.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1106.25">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -18,9 +17,9 @@
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
             <TextBlock Text="Manage Students" 
-                       FontSize="35"
-                       Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-                       VerticalAlignment="Center"/>
+                   FontSize="35"
+                   Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                   VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -43,12 +42,12 @@
 
                                     <Grid Grid.Column="1">
                                         <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                                                 materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" Width="200"
-                                                 Height="30" TextChanged="SearchTextBox">
+                                             materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0" Width="200"
+                                             Height="30" TextChanged="SearchTextBox">
                                         </TextBox>
                                     </Grid>
                                     <Grid Grid.Column="2">
-                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="addStudentBtn">
+                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="EnrollStudentBtn">
                                             <StackPanel>
                                                 <materialDesign:PackIcon Kind="Add" Height="20"/>
                                             </StackPanel>
@@ -60,10 +59,10 @@
 
                         <Grid Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <DataGrid x:Name="studentsDataGrid" Style="{StaticResource DataGridStyle1}"
-                                      RowStyle="{DynamicResource DataGridRowStyle1}"
-                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                      CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Students}"
-                                      AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                  RowStyle="{DynamicResource DataGridRowStyle1}"
+                                  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                                  CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Students}"
+                                  AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
                                 <DataGrid.Columns>
 
@@ -87,11 +86,11 @@
                                                     <Button Style="{StaticResource gridEditButton}" Click="EditButton_Click">
                                                         <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
-                                                    <Button Margin="5 0 5 0" Style="{StaticResource gridRemoveButton}" Click="deleteStudentBtn">
+                                                    <Button Margin="5 0 5 0" Style="{StaticResource gridRemoveButton}" Click="DeleteButton_Click">
                                                         <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                     <Button Margin="0 0 0 0" Style="{StaticResource gridEditButton}" 
-                                                            Background="Green" Cursor="Hand" Click="ShowGradeBtn">
+                                                        Background="Green" Cursor="Hand" Click="ShowButton_Click">
                                                         <materialDesign:PackIcon Kind="Eye" Style="{StaticResource gridButtonIcon}"/>
                                                     </Button>
                                                 </StackPanel>
