--- a/GradingSystem/View/Admin/ManageSubjects.xaml
+++ b/GradingSystem/View/Admin/ManageSubjects.xaml
@@ -12,103 +12,93 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
             <TextBlock Text="Manage Subjects" 
-            FontSize="35"
-            Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-            VerticalAlignment="Center"/>
+                       FontSize="35"
+                       Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                       VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
             <Border Background="Black" VerticalAlignment="Stretch" Margin="10 10 10 10" CornerRadius="4">
-                <materialDesign:Card Background="White" Height="500">
+                <materialDesign:Card Background="White" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                            <materialDesign:Card>
+                            <materialDesign:Card Padding="5">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <Grid Grid.Column="0" Margin="20 0 0 0">
-                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
-                                            Export
-                                        </Button>
-                                    </Grid>
-
                                     <Grid Grid.Column="1">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="auto"/>
-                                            <ColumnDefinition Width="auto"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <Grid Grid.Column="0">
-                                            <TextBox x:Name="SearchTextBox" Style="{StaticResource MaterialDesignOutlinedTextBox}" 
-                                                     Width="200" Height="30" materialDesign:HintAssist.Hint="Search" MaxLength="10"
-                                                     Padding="10 0 0 0" TextChanged="SearchTextBox_TextChanged">
-                                            </TextBox>
-                                        </Grid>
-                                        <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddSubject">
-                                                <StackPanel>
-                                                    <materialDesign:PackIcon Kind="Add" Height="20"/>
-                                                </StackPanel>
-                                            </Button>
-                                        </Grid>
+                                        <TextBox x:Name="SearchTextBox" Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                                                 Width="200" Height="30" materialDesign:HintAssist.Hint="Search" MaxLength="10"
+                                                 Padding="10 0 0 0" TextChanged="SearchTextBox_TextChanged">
+                                        </TextBox>
+                                    </Grid>
+                                    <Grid Grid.Column="2">
+                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddSubject">
+                                            <StackPanel>
+                                                <materialDesign:PackIcon Kind="Add" Height="20"/>
+                                            </StackPanel>
+                                        </Button>
                                     </Grid>
                                 </Grid>
                             </materialDesign:Card>
                         </Grid>
 
-                        <Grid Grid.Row="1" VerticalAlignment="Stretch">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
+                        <Grid Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <DataGrid Grid.Row="0" x:Name="subjectsDataGrid" Style="{StaticResource DataGridStyle1}"
-                                          RowStyle="{DynamicResource DataGridRowStyle1}"
-                                          ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                          CellStyle="{DynamicResource DataGridCellStyle1}" 
-                                          HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" 
-                                          VerticalAlignment="Stretch" SelectedItem="{Binding SelectedSubject}"
-                                          VerticalScrollBarVisibility="Auto" ItemsSource="{Binding FilteredSubjects}" >
+                                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+                                      CellStyle="{DynamicResource DataGridCellStyle1}" 
+                                      HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" 
+                                      VerticalAlignment="Stretch" SelectedItem="{Binding SelectedSubject}"
+                                      VerticalScrollBarVisibility="Auto" ItemsSource="{Binding FilteredSubjects}" >
 
-                                    <DataGrid.Columns>
-                                        <DataGridTextColumn Header="SubjectID" IsReadOnly="True" CanUserResize="False" Width="100" Binding="{Binding SubjectId}"/>
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="SubjectID" IsReadOnly="True" CanUserResize="False" Width="100" Binding="{Binding SubjectId}"/>
                                     <DataGridTextColumn Header="Course Code" CanUserResize="False" Binding="{Binding CourseCode}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Name" CanUserResize="False" Binding="{Binding SubjectName}" IsReadOnly="True" Width="*"/>
-                                        <DataGridTextColumn Header="Schedule" CanUserResize="False" Binding="{Binding Schedule}" IsReadOnly="True" Width="*"/>
-                                        <DataGridTextColumn Header="Professor" CanUserResize="False" Binding="{Binding ProfessorName}" IsReadOnly="True" Width="*"/>
-                                        <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTemplateColumn Header="Name" CanUserResize="False" IsReadOnly="True" Width="*">
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding SubjectName}" TextWrapping="Wrap" />
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                    <DataGridTextColumn Header="Schedule" CanUserResize="False" Binding="{Binding Schedule}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Professor" CanUserResize="False" Binding="{Binding ProfessorName}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="CreatedAt" CanUserResize="False" Binding="{Binding CreatedAt, StringFormat=dd/MM/yyyy hh:mm tt}" IsReadOnly="True" Width="*"/>
 
-                                        <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
-                                            <DataGridTemplateColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <StackPanel Orientation="Horizontal">
-                                                    <Button Style="{StaticResource gridEditButton}" Click="EditSubjectBtn_Click" 
-                                                            >
-                                                            <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
-                                                        </Button>
-                                                        <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" Click="DeleteSubjectBtn">
-                                                            <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
-                                                        </Button>
-                                                    </StackPanel>
-                                                </DataTemplate>
-                                            </DataGridTemplateColumn.CellTemplate>
-                                        </DataGridTemplateColumn>
+                                    <DataGridTemplateColumn Header="Action" CanUserResize="False" IsReadOnly="True" Width="auto" >
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Button Style="{StaticResource gridEditButton}" Click="EditSubjectBtn_Click">
+                                                        <materialDesign:PackIcon Kind="PencilOutline" Style="{StaticResource gridButtonIcon}"/>
+                                                    </Button>
+                                                    <Button Margin="5 0 0 0" Style="{StaticResource gridRemoveButton}" Click="DeleteSubjectBtn">
+                                                        <materialDesign:PackIcon Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}"/>
+                                                    </Button>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
 
-                                    </DataGrid.Columns>
+                                </DataGrid.Columns>
 
-                                </DataGrid>
+                            </DataGrid>
                         </Grid>
 
                     </Grid>
