--- a/GradingSystem/View/Admin/ManageUser.xaml
+++ b/GradingSystem/View/Admin/ManageUser.xaml
@@ -12,69 +12,58 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- Dashboard Title -->
         <Grid Grid.Row="0" Margin="30 0 0 0">
             <TextBlock Text="Manage User" 
-           FontSize="35"
-           Style="{StaticResource MaterialDesignCaptionTextBlock}" 
-           VerticalAlignment="Center"/>
+                       FontSize="35"
+                       Style="{StaticResource MaterialDesignCaptionTextBlock}" 
+                       VerticalAlignment="Center"/>
         </Grid>
 
         <Grid Grid.Row="1">
             <Border Background="Black" Margin="10 10 10 10" CornerRadius="4">
-                <materialDesign:Card Background="White" Height="500">
+                <materialDesign:Card Background="White" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="50"/>
                             <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
                         <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
-                            <materialDesign:Card>
+                            <materialDesign:Card Padding="5">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="auto"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <Grid Grid.Column="0" Margin="20 0 0 0">
-                                        <Button Width="100" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignFlatDarkBgButton}">
-                                            Export
-                                        </Button>
-                                    </Grid>
-
                                     <Grid Grid.Column="1">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="auto"/>
-                                            <ColumnDefinition Width="auto"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <Grid Grid.Column="0">
-                                            <TextBox x:Name="SearchTextBox" Style="{StaticResource MaterialDesignOutlinedTextBox}" Width="200"
-                                                     materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0"
-                                                     Height="30" TextChanged="TextBox_TextChanged">
-                                            </TextBox>
-                                        </Grid>
-                                        <Grid Grid.Column="1">
-                                            <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddUserBtn">
-                                                <StackPanel>
-                                                    <materialDesign:PackIcon Kind="Add" Height="20"/>
-                                                </StackPanel>
-                                            </Button>
-                                        </Grid>
+                                        <TextBox x:Name="SearchTextBox" Style="{StaticResource MaterialDesignOutlinedTextBox}" Width="200"
+                                                 materialDesign:HintAssist.Hint="Search" Padding="10 0 0 0"
+                                                 Height="30" TextChanged="TextBox_TextChanged">
+                                        </TextBox>
+                                    </Grid>
+                                    <Grid Grid.Column="2">
+                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="AddUserBtn">
+                                            <StackPanel>
+                                                <materialDesign:PackIcon Kind="Add" Height="20"/>
+                                            </StackPanel>
+                                        </Button>
                                     </Grid>
                                 </Grid>
                             </materialDesign:Card>
                         </Grid>
 
-                        <Grid Grid.Row="1" Height="auto">
+                        <Grid Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <DataGrid x:Name="studentsDataGrid" Style="{StaticResource DataGridStyle1}"
                                       RowStyle="{DynamicResource DataGridRowStyle1}"
                                       ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                      CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Users}">
+                                      CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Users}"
+                                      AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
                                 <DataGrid.Columns>
 
